--- a/styles/app.css
+++ b/styles/app.css
@@ -36,7 +36,7 @@
     margin: 0 0 1px 0;
     border: 0;
     border-radius: 0;
-    background-color: #E3F2FF;
+    background-color: #E8EBFA;
     color: #303030;
     cursor: pointer;
 }
