--- a/styles/app.css
+++ b/styles/app.css
@@ -66,20 +66,60 @@
 .tdb-box.editable .list-group-item-header, .tdb-box.editable .list-group-item-text {
   outline-color: transparent;
 }
-.tdb-box.editable .tdb-tag {
-  position: relative;
-}
 .tdb-box:hover {
   background-color: #F5F5F5;
 }
-.tdb-box:hover .tdb-control {
+.tdb-box:hover .tdb-controls {
   display: block;
 }
-.tdb-box:hover .tdb-tag {
+.tdb-box:hover .tdb-tags {
   display: none;
 }
-.tdb-control {
+.tdb-controls {
   display: none;
+  float: right;
+}
+.tdb-box .tdb-newtag {
+  display: none;
+  border: none;
+  width: 100px;
+  margin-left: 5px;
+  border-bottom: 1px solid #808080;
+  background-color: transparent;
+  outline: none;
+}
+.tdb-box.editable .tdb-newtag{
+  display: inline-block;
+}
+.shake {
+  animation: shake 0.5s cubic-bezier(.36,.07,.19,.97) both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
+ }
+
+ @keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+    color: red;
+  }
+  
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+    color: red;
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+    color: red;
+  }
+
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+    color: red;
+  }
+}
+.tdb-control {
   width: 40px;
   height: 40px;
   border-radius: 20px;
@@ -87,8 +127,8 @@
   border: 1px solid #E5E5E5;
   padding: 10px 2px;
   text-align: center;
-  float: right;
   cursor: pointer;
+  display: inline-block;
 }
 .tdb-control:hover {
   background-color: #428BCA;
@@ -96,7 +136,7 @@
   color: #FFFFFF;
 }
 .tdb-tag {
-  padding: 5px;
+  padding: 5px 10px;
   margin: 0 0 1px 0;
   border: 0;
   border-radius: 0;
@@ -104,9 +144,24 @@
   color: #303030;
   cursor: pointer;
 }
+.tdb-tag-remove {
+  display: none;
+  vertical-align: bottom;
+  padding: 0 5px;
+  margin-right: -5px;
+  cursor: pointer;
+}
+.tdb-box.editable .tdb-tag-remove {
+  display: inline-block;
+}
+.tdb-box .tdb-tags {
+  position: absolute;
+  right: 20px;
+  top: 15px;
+  margin-top: 5px;
+}
 .tdb-box .tdb-tag {
   display: inline-block;
-  float: right;
   margin-left: 2px;
   cursor: default;
 }
@@ -133,8 +188,31 @@
   margin-top: 0;
   margin-bottom: 5px;
 }
+.tdb-box .tdb-title {
+  display: block;
+  font-size: 1.5em;
+  color: #428BCA;
+  background-color: transparent;
+  border: none;
+}
+.tdb-box .tdb-content {
+  display: block;
+  font-size: 1em;
+  color: #428BCA;
+  background-color: transparent;
+  border: none;
+}
 .tdb-box p:last-child {
   margin-bottom: 0;
+}
+.tdb-box.editable .tdb-controls.sticky{
+  display: block;
+}
+.tdb-box.editable .tdb-tags {
+  position: static;
+}
+.tdb-box.editable:hover .tdb-tags {
+  display: inline-block;
 }
 .tdb-box-gray {
   border-left-color: #777;
@@ -172,7 +250,25 @@
 .tdb-box-cyan h4 {
   color: #5bc0de;
 }
-@media (max-width: 767px){
+.bg-red {
+  background-color: #B35F47;
+  border-color: #B35F47;
+  color: #FFFFFF;
+}
+.bg-red:hover {
+  background-color: #A34A31;
+  border-color: #A34A31;
+}
+.bg-green {
+  background-color: #5CAD5F;
+  border-color: #5CAD5F;
+  color: #FFFFFF;
+}
+.bg-green:hover {
+  background-color: #458A47;
+  border-color: #458A47;
+}
+@media (max-width:767px) {
   .col-lg-0 {
     height: 0;
     min-height: auto;
