--- a/templates/new-button.html
+++ b/templates/new-button.html
@@ -1,3 +1,3 @@
-<div class="tdb-new tdb-control bg-blue shadow-bottom-right" ng-click="taskCtrl.addTask()">
+<div class="tdb-new tdb-control shadow-bottom-right control-bg-primary" ng-click="taskCtrl.addTask()">
   <span class="glyphicon glyphicon-plus"></span>
 </div>
